@@ -87,6 +87,7 @@ struct headerToken_s {
     void * blob;		/*!< Header region blob. */
 /*@only@*/ /*@null@*/
     const char * origin;	/*!< Header origin (e.g. path or URL). */
+    const char * baseurl;	/*!< Header base URL (e.g. path or URL). */
     const char * digest;	/*!< Header digest (from origin *.rpm file) */
     struct stat sb;		/*!< Header stat(2) (from origin *.rpm file) */
     uint32_t instance;		/*!< Header instance (if from rpmdb). */
